--- a/index.html
+++ b/index.html
@@ -5,10 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
-    <link rel="stylesheet" href="script.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/script.css" type="text/css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="box one">
+        </div>
+        <div class="box three">
+        </div>
+        <div class="box one">
+        </div>
+
+        <div class="box two">
+        </div>
+        <div class="box one">
+        </div>
+        <div class="box two">
+        </div>
+
+        <div class="box three">
+        </div>
+        <div class="box three">
+        </div>
+        <div class="box two">
+        </div>
+    </div>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
